# FastChat

./: pyproject.toml
docker/: Dockerfile.mtbench  docker-compose.yml
fastchat/: conversation.py
fastchat/llm_judge/: gen_model_answer.py
fastchat/model/: model_adapter.py
