[tool.poetry]
name = "mtbench"
version = "0.0.1"
description = "An open platform for training, serving, and evaluating large language model based chatbots."
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
homepage = "https://github.com/lm-sys/fastchat"
repository = "https://github.com/lm-sys/fastchat"
keywords = ["chatbot", "ai", "ml", "llm"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.70.0"
httpx = "^0.18.2"
markdown2 = {extras = ["all"], version = "^2.4.0"}
nh3 = "^0.2.7"
numpy = "^1.21.2"
prompt_toolkit = ">=3.0.0"
pydantic = "<2,>=1"
requests = "^2.26.0"
rich = ">=10.0.0"
shortuuid = "^1.0.1"
tiktoken = "^0.3.0"
uvicorn = "^0.15.0"
einops = "^0.3.2"
openai = "*"
accelerate = ">=0.21"
peft = ">=0.10.0"
sentencepiece = ">=0.1.96"
torch = ">=2.2.0"
transformers = ">=4.31.0"
fschat = "*"
anthropic = "*"
ray = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/lm-sys/fastchat"
"Bug Tracker" = "https://github.com/lm-sys/fastchat/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
